# ParcialML

./: ML_WineData.ipynb  README.md
RegresionLineal-Qt/: CMakeLists.txt  exeigennorm.cpp  linealregression.cpp  linealregression.h  main.cpp  winedata.csv
